--- a/app/views/admin/escapes/edit.html.erb
+++ b/app/views/admin/escapes/edit.html.erb
@@ -5,7 +5,7 @@
 <%= f.text_field :name %><br>
 
 <%= f.label :description %>
-<%= f.text_field :description %><br>
+<%= f.text_area :description %><br>
 
 <%= f.label :photo %>
 <%= f.file_field :photo %><br>
