--- a/app/views/admin/escapes/index.html.erb
+++ b/app/views/admin/escapes/index.html.erb
@@ -1,6 +1,6 @@
 <h3>All Escapes</h3>
 <h4> <%= link_to "Create a new Escape", new_admin_escape_path %></h4>
-<table>
+<table class="admin-escapes-table">
   <tr>
     <th></th>
     <th>Name</th>
