--- a/app/views/admin/escapes/new.html.erb
+++ b/app/views/admin/escapes/new.html.erb
@@ -8,7 +8,7 @@
 <%= f.text_field :name %><br>
 
 <%= f.label :description %>
-<%= f.text_field :description %><br>
+<%= f.text_area :description %><br>
 
 <%= f.label :city %>
 <%= f.text_field :city %><br>
