--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -4,7 +4,13 @@
   <h2>Edit your account</h2>
   <%= form_for(current_user, url: admin_user_path) do |f|%>
   <%= f.label :username %>
-  <%= f.text_field :username %>
+  <%= f.text_field :username %><br>
+
+  <%= f.label :full_name %>
+  <%= f.text_field :full_name %><br>
+
+  <%= f.label :address %>
+  <%= f.text_area :address %><br>
 
   <%= f.submit "Edit Account"%>
   <% end %>
