--- a/app/views/escapes/index.html.erb
+++ b/app/views/escapes/index.html.erb
@@ -1,30 +1,40 @@
-<div class="jumbotron">
-  <h1>Escape the Basement</h1>
-</div>
+<% if current_page?(root_path) %>
+  <%= render partial: 'layouts/header' %>
+<% end %>
+<h1 class="text-center">Escapes</h1>
+<br>
 
+<% @escapes.each do |escape| %>
 <div class="container">
-  <div class="text-center">
-    <h1>Escapes</h1>
+  <div class="media col-md-3">
+    <figure class= "pull-left">
+      <%= image_tag escape.photo.url(:medium), class: "media-object img-rounded img-responsive" %>
+      <br>
+    </figure>
+  </div>
+
+
+  <div class="col-md-6">
+    <h4 class="list-group-item-heading"><%= link_to escape.name, escape_path(escape) %></h4>
+    <div class= "list-group_item_text">
+      <p>Description: <%= escape.description %></p>
+      <p>Price: $<%= sprintf('%.2f', escape.price) %></p>
+      <p>City: <%= escape.city %></p>
+    </div>
+  </div>
+
+  <div class="col-md-3 text-center">
+    <div class="buttons">
+      <% if escape.active %>
+        <%= button_to "Book Escape", cart_path(escape_id: escape.id), class: "btn btn-danger" %><br>
+      <% else %>
+        <h6 class="retired"> This Escape is now retired. You missed out!</h6>
+      <% end %>
+    </div>
   </div>
 </div>
+<hr>
+<% end %>
 
-<ul>
-  <% @escapes.each do |escape| %>
-    <div class="escape">
-      <h4><%= link_to escape.name, escape_path(escape) %></h4>
-        <ul>
-          <%= image_tag escape.photo.url(:medium), class: :image %>
-          <li>Description: <%= escape.description %></li>
-          <li>Price: $<%= sprintf('%.2f', escape.price) %></li>
-          <li>City: <%= escape.city %></li>
-          <% if escape.active %>
-            <%= button_to "Book Escape", cart_path(escape_id: escape.id), class: "btn btn-danger" %><br>
-          <% else %>
-            <h5 class="retired"><strong>This Escape is now retired. You missed out!</strong></h5>
-          <% end %>
-        </ul>
-    </div>
-  <% end %>
-</ul>
 
 <%= will_paginate @escape %>
