--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,18 +4,18 @@
   Address: <%= @order.user.address %><br>
 <% end %>
 
-Order Date: <%= @order.format_created_at %><br>
-Order Status: <%= @order.status %>
+<strong>Order Date:</strong> <%= @order.format_created_at %><br>
+<strong>Order Status:</strong> <%= @order.status %>
 <% if @order.status == "cancelled" || @order.status == "completed" %>
 
   <%="on #{@order.format_updated_at}" %><br>
   <% end %><br>
-Total Price: $<%= @order.format_total%><br>
-
+<strong>Total Price:</strong> $<%= @order.format_total%><br><br>
+<h4>Escapes in this order: </h4><br>
 <% @order.order_escapes.each do |order_escape| %>
- <%= link_to Escape.find(order_escape.escape_id).name, escape_path(order_escape.escape.id)%>
-    Quantity: <%= order_escape.quantity%><br>
-    Escape Price: $<%= order_escape.escape.format_price %><br>
-    Subtotal: $<%= order_escape.format_total%><br><br>
+ <%= link_to Escape.find(order_escape.escape_id).name, escape_path(order_escape.escape.id)%><br>
+    <strong>Quantity:</strong> <%= order_escape.quantity%><br>
+    <strong>Escape Price:</strong> $<%= order_escape.escape.format_price %><br>
+    <strong>Subtotal:</strong> $<%= order_escape.format_total%><br><br>
 <% end %>
 <br>
