--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,4 +1,14 @@
 <h1>Welcome <%= @user.username %></h1>
 
 
-<%= link_to "Order History", orders_path %>
+<h5><%= link_to "Order History", orders_path %></h5><br><br>
+
+<h4>Profile Information</h4>
+
+<strong>Username:</strong> <%= @user.username %><br>
+<strong>Name:</strong> <%= @user.full_name %><br>
+<strong>Address:</strong> <%= @user.address %><br><br>
+
+<% if current_user = @user && @user.admin? %>
+  <%= button_to "Edit Account", edit_admin_user_path(@user), method: :get, class: "btn btn-green"%>
+<% end %>
