--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,6 +6,10 @@
         <ul class="dropdown-menu">
           <li><%= link_to "Indoors", '/Indoors' %></li>
           <li><%= link_to "Outdoors", '/Outdoors' %></li>
+          <li><%= link_to "Adventure", '/Adventure' %></li>
+          <li><%= link_to "Relaxing", '/Relaxing' %></li>
+          <li><%= link_to "Family", '/Family' %></li>
+          <li><%= link_to "Individual", '/Individual' %></li>
         </ul>
      </li>
 
