--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,7 +7,7 @@
     <div class="media col-md-3">
       <figure class= "pull-left">
         <br>
-        <%= image_tag escape.photo.url(:medium) %>
+        <%= image_tag escape.photo.url(:medium), class: "media-object img-rounded img-responsive" %>
         <br>
       </figure>
     </div>
