--- a/app/views/escapes/show.html.erb
+++ b/app/views/escapes/show.html.erb
@@ -5,7 +5,7 @@
 <div class="container">
 <div class="media col-md-3">
   <figure class= "pull-left">
-    <%= image_tag @escape.photo.url(:medium) %><br>
+    <%= image_tag @escape.photo.url(:medium), class: "media-object img-rounded img-responsive" %><br>
 </figure>
 </div>
 
