--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,17 @@
 
 
 <%= form_for(@user) do |f| %>
+
+<p class="float">
+    <%= f.label :full_name %>
+    <%= f.text_field :full_name, placeholder: "Full Name" %>
+  </p>
+
+  <p class="float">
+    <%= f.label :address %>
+    <%= f.text_field :address, placeholder: "Address" %>
+  </p> 
+  
   <p class="float">
     <%= f.label :username %>
     <%= f.text_field :username, placeholder: "Username" %>
