fix photo issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -321,7 +321,7 @@ table tr :nth-child(1) {
 }
 
 .jumbotron {
-  background: url('Turing.png');
+  background: url('http://imgur.com/a/TEKqi');
   height: 400px;
 }
 
@@ -336,4 +336,3 @@ table tr :nth-child(1) {
 .admin-escapes-table th {
   text-align: center;
 }
-
