fix jumbotron photo

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -321,7 +321,7 @@ table tr :nth-child(1) {
 }
 
 .jumbotron {
-  background: url('http://imgur.com/a/TEKqi');
+  background-image: url("http://imgur.com/24IyTUG.png");
   height: 400px;
 }
 
