--- a/app/views/escapes/index.html.erb
+++ b/app/views/escapes/index.html.erb
@@ -1,5 +1,6 @@
 <% if current_page?(root_path) %>
-  <%= render partial: 'layouts/header' %>
+  <div class="jumbotron">
+  </div>
 <% end %>
 
 <h1 class="text-center">Escapes</h1>
